--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loadingg": "^1.7.2",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slide-fade-in": "^1.0.7",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "web-vitals": "^2.1.4"
